--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,26 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
   <link rel='shortcut icon' href='assets/favicon.svg' type='image/x-icon' />
+
+
+  <!-- Open Graph Data   -->
+  <meta property="og:site_name" content="Country Lookup" />
+  <meta property="og:title" content="Country Lookup in Angular" />
+  <meta name="twitter:title" content="Country Lookup in Angular" />
+  <meta name="twitter:card" content="https://cdn2.iconfinder.com/data/icons/flat-style-svg-icons-part-1/512/location_marker_pin-512.png" />
+  <meta name="twitter:site" content="@rahucrux" />
+  <meta property="og:type" content="Web app" />
+  <meta name="twitter:description" content="Country Lookup in Angular" />
+  <meta property="og:description" content="Country Lookup in Angular" />
+
+  <!--  Todo: Add site logo -->
+  <meta property="og:image" content="https://cdn2.iconfinder.com/data/icons/flat-style-svg-icons-part-1/512/location_marker_pin-512.png" />
+  <meta name="twitter:image" content="https://cdn2.iconfinder.com/data/icons/flat-style-svg-icons-part-1/512/location_marker_pin-512.png" />
+
+  <!-- favicon -->
+  <link rel="shortcut icon" type="image/png" href="https://cdn2.iconfinder.com/data/icons/flat-style-svg-icons-part-1/512/location_marker_pin-512.png" />
+  <link rel="shortcut icon" type="image/png" href="https://cdn2.iconfinder.com/data/icons/flat-style-svg-icons-part-1/512/location_marker_pin-512.png" />
+  
   
   <meta name="google-signin-client_id" content="260121249713-ilvng8rj1bjgfj36k49lclq2th4ecoc4.apps.googleusercontent.com">    
 </head>
