Add Change favicon

--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,8 @@
   <meta name="twitter:card" content="https://cdn2.iconfinder.com/data/icons/flat-style-svg-icons-part-1/512/location_marker_pin-512.png" />
   <meta name="twitter:site" content="@rahucrux" />
   <meta property="og:type" content="Web app" />
-  <meta name="twitter:description" content="Country Lookup in Angular" />
-  <meta property="og:description" content="Country Lookup in Angular" />
+  <meta name="twitter:description" content="Search | View | Explore" />
+  <meta property="og:description" content="Search | View | Explore" />
 
   <!--  Todo: Add site logo -->
   <meta property="og:image" content="https://cdn2.iconfinder.com/data/icons/flat-style-svg-icons-part-1/512/location_marker_pin-512.png" />
